# py_cicd

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: security.yml
tests/: test_app.py
