[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_cicd"
version = "0.1.0"
description = "Minimal Python project demonstrating SAST, SCA and DAST with GitHub Actions"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
# Wir haben nur eine einzelne Moduldatei app.py
py-modules = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]
